compiler/testData/asJava/lightClasses/lightClassByFqName/compilationErrors/unresolvedQuialifierInAnnotation.kt
// A

annotation class Ann(konst kClass: KClass<*>)

@Ann(some.name.Unresolved::class)
class A
